syntax = "proto3";
package ununifi.nftfactory;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nftfactory/nftfactory.proto";

option go_package = "github.com/UnUniFi/chain/x/nftfactory/types";

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ununifi/nftfactory/params";
  }
  rpc ClassAttributes(QueryClassAttributesRequest) returns (QueryClassAttributesResponse) {
    option (google.api.http).get = "/ununifi/nftfactory/class_owner/{class_id}";
  }
  rpc NFTMinter(QueryNFTMinterRequest) returns (QueryNFTMinterResponse) {
    option (google.api.http).get = "/ununifi/nftfactory/nft_minter/{class_id}/{nft_id}";
  }
  rpc ClassIdsByName(QueryClassIdsByNameRequest) returns (QueryClassIdsByNameResponse) {
    option (google.api.http).get = "/ununifi/nftfactory/class_ids_by_name/{class_name}";
  }
  rpc ClassIdsByOwner(QueryClassIdsByOwnerRequest) returns (QueryClassIdsByOwnerResponse) {
    option (google.api.http).get = "/ununifi/nftfactory/class_ids_by_owner/{owner}";
  }
}

message QueryParamsRequest {}
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryClassAttributesRequest {
  string class_id = 1;
}
message QueryClassAttributesResponse {
  ClassAttributes class_attributes = 1;
}

message QueryNFTMinterRequest {
  string class_id = 1;
  string nft_id = 2;
}
message QueryNFTMinterResponse {
  string minter = 1;
}

message QueryClassIdsByNameRequest {
  string class_name = 1;
}
message QueryClassIdsByNameResponse {
  ClassNameIdList class_name_id_list = 1;
}

message QueryClassIdsByOwnerRequest {
  string owner = 1;
}
message QueryClassIdsByOwnerResponse {
  OwningClassIdList owning_class_id_list = 1;
}
