syntax = "proto3";
package ununifi.nftmint;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nftmint/nftmint.proto";

option go_package = "github.com/UnUniFi/chain/x/nftmint/types";

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ununifi/nftmint/params";
  }
  rpc ClassOwner(QueryClassOwnerRequest) returns (QueryClassOwnerResponse) {
    option (google.api.http).get = "/ununifi/nftmint/class_owner";
  }
  rpc NFTMinter(QueryNFTMinterRequest) returns (QueryNFTMinterResponse) {
    option (google.api.http).get = "/ununifi/nftmint/nft_minter";
  }
  rpc ClassIdByName(QueryClassIdsByNameRequest) returns (QueryClassIdsByNameResponse) {
    option (google.api.http).get = "/ununifi/nftmint/class_ids_by_name";
  }
  rpc ClassBaseTokenUri(QueryClassBaseTokenUriRequest) returns (QueryClassBaseTokenUriResponse) {
    option (google.api.http).get = "/ununifi/nftmint/class_base_token_uri";
  }
  rpc ClassTokenSupplyCap(QueryClassTokenSupplyCapRequest) returns (QueryClassTokenSupplyCapResponse) {
    option (google.api.http).get = "/ununifi/nftmint/class_token_supply_cap";
  }
  rpc ClassIdsByOwner(QueryClassIdsByOwnerRequest) returns (QueryClassIdsByOwnerResponse) {
    option (google.api.http).get = "/ununifi/nftmint/class_ids_by_owner";
  }
}

message QueryParamsRequest {}
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryClassOwnerRequest {
  string class_id = 1;
}
message QueryClassOwnerResponse {
  string owner = 1  [
    (gogoproto.moretags) = "yaml:\"owner\"",
    (gogoproto.customtype) = "github.com/UnUniFi/chain/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
}

message QueryNFTMinterRequest {
  string class_id = 1;
  string nft_id = 2;
}
message QueryNFTMinterResponse {
  string minter = 1  [
    (gogoproto.moretags) = "yaml:\"minter\"",
    (gogoproto.customtype) = "github.com/UnUniFi/chain/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
}

message QueryClassIdsByNameRequest {
  string class_name = 1;
}
message QueryClassIdsByNameResponse {
  repeated string class_id = 1;
}

message QueryClassBaseTokenUriRequest {
  string class_id = 1;
}
message QueryClassBaseTokenUriResponse {
  string base_token_uri = 1;
}

message QueryClassTokenSupplyCapRequest {
  string class_id = 1;
}
message QueryClassTokenSupplyCapResponse {
  uint64 token_supply_cap = 1;
}

message QueryClassIdsByOwnerRequest {
  string owner = 1 [
    (gogoproto.moretags) = "yaml:\"owner\"",
    (gogoproto.customtype) = "github.com/UnUniFi/chain/types.StringAccAddress",
    (gogoproto.nullable) = false
  ];
}
message QueryClassIdsByOwnerResponse {
  repeated string class_id = 1;
}
